--- a/NetworkEditor/debian/rules
+++ b/NetworkEditor/debian/rules
@@ -81,7 +81,7 @@ binary-arch: build install
 	dh_installchangelogs 
 	dh_installdocs
 	dh_installexamples
-	dh_install
+	dh_install --sourcedir=debian/tmp
 	dh_installmenu
 #	dh_installdebconf	
 #	dh_installlogrotate
