--- a/NetworkEditor/debian/rules
+++ b/NetworkEditor/debian/rules
@@ -81,6 +81,7 @@ binary-arch: build install
 	dh_installchangelogs 
 	dh_installdocs
 	dh_installexamples
+	find debian
 	dh_install --sourcedir=debian/tmp
 	dh_installmenu
 #	dh_installdebconf	
