--- a/trunk/NetworkEditor/debian/control
+++ b/trunk/NetworkEditor/debian/control
@@ -37,7 +37,7 @@ Description: CLAM Network Editor, examples
  Those examples include, among others, some sinusoidal plus residual 
  modelling (SMS) transformations and tonal (chords, notes) analysis.
 
-Package: libclam-qtmonitors1.3
+Package: libclam-qtmonitors1.4
 Architecture: any
 Section: libs
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -53,8 +53,8 @@ Description: visual
 Package: libclam-qtmonitors-dev
 Architecture: any
 Section: libdevel
-Depends: ${shlibs:Depends}, ${misc:Depends}, libclam-qtmonitors1.3 (= ${binary:Version}), libclam-dev
-Description: development files for libclam-qtmonitors1.3
+Depends: ${shlibs:Depends}, ${misc:Depends}, libclam-qtmonitors1.4 (= ${binary:Version}), libclam-dev
+Description: development files for libclam-qtmonitors CLAM extensions
  The CLAM framework can be used to develop rich real-time audio and music
  applications either by c++ programming or by visual means using the
  CLAM NetworkEditor.
