--- a/CLAM/plugins/temporal_oboeSynthesizer/SConstruct
+++ b/CLAM/plugins/temporal_oboeSynthesizer/SConstruct
@@ -1,18 +1,9 @@
-#! /usr/bin/python
+#!/usr/bin/env python
 
 import os, glob, sys
 
 baseName = 'continuous_excitation_synth'
 libraryName='plugins_'+baseName
-
-def scanFiles(pattern, paths) :
-	files = []
-	for path in paths :
-		files+=glob.glob(os.path.join(path,pattern))
-	return files
-
-def recursiveDirs(root) :
-	return filter( (lambda a : a.rfind( ".svn")==-1 ),  [ a[0] for a in os.walk(root)]  )
 
 options = Variables('options.cache', ARGUMENTS)
 options.Add(PathVariable('clam_prefix', 'The prefix where CLAM was installed', ''))
@@ -29,6 +20,8 @@ env.SConsignFile() # Single signature file
 CLAMInstallDir = env['clam_prefix']
 InstallDir = env['prefix'] or env['clam_prefix']
 clam_sconstoolspath = os.path.join(CLAMInstallDir,'share','clam','sconstools')
+if not os.access(os.path.join(clam_sconstoolspath,"clam.py"),os.R_OK):
+	raise Exception("CLAM not installed at '%s'. Use clam_prefix option."%CLAMInstallDir)
 if env['crossmingw'] :
 	env.Tool('crossmingw', toolpath=[clam_sconstoolspath])
 env.Tool('clam', toolpath=[clam_sconstoolspath])
@@ -38,8 +31,6 @@ env.EnableClamModules([
 	'clam_processing',
 	] , CLAMInstallDir)
 
-sourcePaths = recursiveDirs(".")
-print sourcePaths
 sources = glob.glob('*.cxx')
 sources += glob.glob('toreview/*.cxx')
 extraPaths = [
