* VstPluginExample: now it links. kludge adding hardcoded assembler file to embed    xml files, instead using the CLAM_EMBEDDED_FILE because a bug in mingw emitting    assembler. Former code to be restored in the future.

--- a/CLAM/examples/PluginExamples/VstPluginExample/SConstruct
+++ b/CLAM/examples/PluginExamples/VstPluginExample/SConstruct
@@ -126,6 +126,7 @@ plugins = [
 		"CLAMVstPlugin.cxx",
 		"VstNetworkExporter.cxx",
 		"QClamVstEditor.cxx",
+		"Files.s",
 		]),
 #	# A VstGui based plugin would need that
 #	env.SharedLibrary("CLAMVstPlugin", source = commonSources + vstguiSources [
