link to raytracing changed

--- a/CLAM/plugins/spacialization/SConstruct
+++ b/CLAM/plugins/spacialization/SConstruct
@@ -50,8 +50,8 @@ env.AppendUnique(CPPPATH=sourcePaths)
 
 if env['raytracing']=='traditional' or env['raytracing']=='convergent':
 	print 'linking with raytracing'
-	env.Append(CPPPATH=[os.path.join('..','..','..','..','acustica','raytracing')])
-	env.Append(LIBPATH=[os.path.join('..','..','..','..','acustica','raytracing')])
+	env.Append(CPPPATH=[os.path.join('..','..','..','..','acustica','src','raytracing')])
+	env.Append(LIBPATH=[os.path.join('..','..','..','..','acustica','src','raytracing')])
 	env.Append(LIBS=['raytracing',"GL","GLU","lo",'glut'])
 	env.ParseConfig('pkg-config --libs sdl')
 else :
