* TickExtractor/OnsetDetector.cxx also uses libsamplerate  * examples/SConstruct: added the pkg-config lines and removed the libresample ones

--- a/CLAM/examples/SConstruct
+++ b/CLAM/examples/SConstruct
@@ -207,9 +207,9 @@ for folder in directoryBasedExamples :
 if not crosscompiling :
 	# Still having problems crosscompiling aubio
 	tickEnv = env.Clone()
-	tickEnv.AppendUnique(CPPPATH=['TickExtractor/libresample-0.1.3/include'])
 	tickEnv.ParseConfig('pkg-config aubio --cflags --libs')
-	tickSrc = glob.glob("TickExtractor/*cxx") + glob.glob("TickExtractor/libresample-0.1.3/src/*.c")
+	tickEnv.ParseConfig('pkg-config samplerate --cflags --libs')
+	tickSrc = glob.glob("TickExtractor/*cxx")
 	examples += [ tickEnv.Program(target="TickExtractorExe", source = tickSrc) ]
 
 env.Alias('examples',examples)
