--- a/CLAM/test/UnitTests/SConscript
+++ b/CLAM/test/UnitTests/SConscript
@@ -43,6 +43,7 @@ blacklist = [
 	os.path.join('TonalAnalysis','ChordExtractorTest.cxx'), # last too long
 	os.path.join('DescriptorsTests','ProofOfConceptTest.cxx'), # Fails always because FFT size, should be rewritten and moved to functional tests
 	os.path.join('FlowControlTests','TestsRandomStream.cxx'), # Fails in some condition when exercising region change while running. Don't need this feature now.
+	os.path.join('FlowControlTests','TestsStlBasedStream.cxx'), # About dropping arbitrary stl containers for streams
 	]
 if 'crossmingw' in env['TOOLS'] :
 	# They lauch exceptions unsuported in crossmingw until upgrade
