--- a/CLAM/plugins/continuousExcitationSynthesizer/SConstruct
+++ b/CLAM/plugins/continuousExcitationSynthesizer/SConstruct
@@ -16,6 +16,7 @@ otherDependencies = [
 options = Variables('options.cache', ARGUMENTS)
 options.Add(PathVariable('clam_prefix', 'The prefix where CLAM was installed', '/usr/local'))
 options.Add(PathVariable('prefix', 'Installation prefix (normally /usr, by default this is clam_prefix)', "", validator=PathVariable.PathAccept))
+options.Add(PathVariable('prefix_for_packaging', 'Install location when packaging. Use "." for same as prefix.', '.'))
 options.Add(BoolVariable('verbose', 'Display the full command line', 'no') )
 options.Add(BoolVariable('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
 
